testdata/golden/sema/invalid/user_type_redefinition.fmt
// scenario: duplicate type declaration in the same module
type Point = {
    x: int,
};

type Point = int;
